fix: scan button on small screens

--- a/src/ui/pages/ProfileSetup/components/GroupSetup/GroupSetup.scss
+++ b/src/ui/pages/ProfileSetup/components/GroupSetup/GroupSetup.scss
@@ -5,7 +5,7 @@
 
   @media screen and (min-width: 250px) and (max-width: 370px) {
     .open-scan.secondary-button {
-      height: 20rem;
+      height: 2rem;
     }
   }
 
